# fingera_libcpp

./: .gitmodules  CMakeLists.txt  README.md
include/fingera/: format.h  predef.h
tests/: CMakeLists.txt  test_format.cpp
